# Cervantes

./: .dockerignore  .gitignore  BACKEND_QUICKSTART.md  Makefile  README.md  architecture.html  cloudbuild.yaml  docker-compose.yml  firestore.indexes.json  setup.html
character-generation/ComfyUI/custom_nodes/ComfyUI_VNCCS/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
character-generation/ComfyUI/custom_nodes/ComfyUI_VNCCS/nodes/: __init__.py  character_creator.py  character_preview.py  character_selector.py  common_nodes.py  dataset_generator.py  emotion_generator.py  emotion_generator_v2.py  pose_generator.py  sampler_scheduler_picker.py  sheet_crop.py  sheet_manager.py  sprite_generator.py  vnccs_pipe.py  vnccs_qwen_encoder.py
character-generation/ComfyUI/custom_nodes/ComfyUI_VNCCS/presets/poses/: vnccs_poseset.json
character-generation/ComfyUI/custom_nodes/ComfyUI_VNCCS/web/: bone_colors.js  pose_editor_3d.js  pose_editor_3d_body.js  pose_editor_3d_render.js  vnccs_emotion_generator.js  vnccs_emotion_v2.js
character-generation/ComfyUI/custom_nodes/ComfyUI_VNCCS/web/vnccs_autofill/: vnccs_autofill.js
character-generation/ComfyUI/custom_nodes/ComfyUI_VNCCS/workflows/old_workflows/: VN_Step1_CharSheetGenerator_v4.1.json  VN_Step1_CharSheetGenerator_v4.json  VN_Step2_ClothesChanger_v4.1.json  VN_Step2_ClothesChanger_v4.json  VN_Step3_CharEmotionGeneratorV3.json  VN_Step3_CharEmotionGeneratorV4.1.json  VN_Step3_CharEmotionGeneratorV5.json  VN_Step4_CharSpriteCreatorV2.json  VN_Step4_CharSpriteCreatorV4.1.json  (+1 more)
(+284 files in other folders)
